<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="dev.tiar.mangacat.ui.DetailActivity"
    tools:showIn="@layout/activity_detail">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:descendantFocusability="blocksDescendants"
        android:paddingBottom="16dp"
        android:orientation="vertical">
        <TextView
            android:id="@+id/title_post_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"
            android:gravity="center"
            android:textSize="20sp"/>
        <TextView
            android:id="@+id/count_pages"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:textColor="@color/colorDarkWhite"
            android:gravity="center"
            android:textSize="15sp"/>
        <include layout="@layout/split_horizontal" />
        <TableLayout
            android:shrinkColumns="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:stretchColumns="*">
            <TableRow
                android:id="@+id/parody_post_l"
                android:orientation="horizontal">
                <TextView
                    android:gravity="left"
                    android:layout_margin="@dimen/text_margin"
                    android:textColor="@color/colorWhite"
                    android:textSize="15sp"
                    android:text="@string/layout_series"/>
                <TextView
                    android:id="@+id/parody_post"
                    android:gravity="left"
                    android:layout_margin="@dimen/text_margin"
                    android:textColor="@color/colorDarkWhite"
                    android:textSize="15sp"/>
            </TableRow>
            <TableRow
                android:id="@+id/char_post_l"
                android:orientation="horizontal">
                <TextView
                    android:gravity="left"
                    android:layout_margin="@dimen/text_margin"
                    android:textColor="@color/colorWhite"
                    android:textSize="15sp"
                    android:text="@string/layout_characters"/>
                <TextView
                    android:id="@+id/char_post"
                    android:layout_margin="@dimen/text_margin"
                    android:textColor="@color/colorDarkWhite"
                    android:gravity="left"
                    android:textSize="15sp"/>
            </TableRow>
            <TableRow
                android:id="@+id/artist_post_l"
                android:orientation="horizontal">
                <TextView
                    android:gravity="left"
                    android:layout_margin="@dimen/text_margin"
                    android:textColor="@color/colorWhite"
                    android:textSize="15sp"
                    android:text="@string/layout_artist"/>
                <TextView
                    android:id="@+id/artist_post"
                    android:gravity="left"
                    android:layout_margin="@dimen/text_margin"
                    android:textColor="@color/colorDarkWhite"
                    android:textSize="15sp"/>
            </TableRow>
            <TableRow
                android:id="@+id/group_post_l"
                android:orientation="horizontal">
                <TextView
                    android:gravity="left"
                    android:layout_margin="@dimen/text_margin"
                    android:textColor="@color/colorWhite"
                    android:textSize="15sp"
                    android:text="@string/layout_group"/>
                <TextView
                    android:id="@+id/group_post"
                    android:layout_margin="@dimen/text_margin"
                    android:textColor="@color/colorDarkWhite"
                    android:gravity="left"
                    android:textSize="15sp"/>
            </TableRow>
            <TableRow
                android:id="@+id/tags_post_l"
                android:orientation="horizontal">
                <TextView
                    android:gravity="left"
                    android:layout_margin="@dimen/text_margin"
                    android:textColor="@color/colorWhite"
                    android:textSize="15sp"
                    android:text="@string/layout_tags"/>
                <TextView
                    android:id="@+id/tags_post"
                    android:gravity="left"
                    android:layout_margin="@dimen/text_margin"
                    android:textColor="@color/colorDarkWhite"
                    android:textSize="15sp"/>
            </TableRow>
        </TableLayout>
        <include layout="@layout/split_horizontal" />
        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_catalog_d"
            android:nestedScrollingEnabled="false"
            android:layout_margin="@dimen/text_margin"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
        <Button
            android:visibility="gone"
            android:id="@+id/read_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:text="@string/layout_read"
            android:textColor="@color/colorWhite"
            android:background="@color/colorAccentDark"/>

        <include layout="@layout/split_horizontal" />
        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_more_d"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/text_margin" />
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>